Commit index page for documentation

--- a/WebContent/resources/documentation/index.html
+++ b/WebContent/resources/documentation/index.html
@@ -43,7 +43,18 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 </script>
 </head>
 <body>
-<h1>Main Documentation</h1>
+<h1>Welcome to the documentation of the IMPC data portal</h1>
+	
+	Explore the diverse entry points to mouse phenotype data. 
+	<ul>
+	<li>How do I search my favorite gene, phenotype. 
+	<p>The IMPC portal offers a powerful search interface to query information on 
+	mouse production and mouse phenotyping. <a href="search-help.html">Find out more</a>
+	</p></li>
+	<li>I want to look at my fovourite gene and retrieve associated phenotype data. <a href="gene-help.html">Find out more</a></li>
+	<li>I want to get a list of genotypes associated to a specific phenotype.a href="phenotype-help.html">Find out more</a> </li>
+	<li>I want to retrieve X-ray, expression images. <a href="image-help.html">Find out more</a></li>
+	</ul>
 	<script type="text/javascript" src='/data/js/bootstrap/bootstrap.min.js' ></script>
 </body>
 </html>
