add template for the help pages

--- a/WebContent/resources/documentation/index.html
+++ b/WebContent/resources/documentation/index.html
@@ -7,55 +7,58 @@
 
 <title>International Mouse Phenotyping Consortium Documentation</title>
 
-<link type='text/css' rel='stylesheet' href='/data/css/bootstrap.min.css'  />
-<link type='text/css' rel='stylesheet' href='/data/css/bootstrap-responsive.min.css'  />
-<style>
-
-[class^="icon-"],
-[class*=" icon-"] {
-  background-image: url("/data/img/glyphicons-halflings.png");
-}
-
-/* White icons with optional class, or on hover/active states of certain elements */
-
-.icon-white,
-.nav-tabs > .active > a > [class^="icon-"],
-.nav-tabs > .active > a > [class*=" icon-"],
-.nav-pills > .active > a > [class^="icon-"],
-.nav-pills > .active > a > [class*=" icon-"],
-.nav-list > .active > a > [class^="icon-"],
-.nav-list > .active > a > [class*=" icon-"],
-.navbar-inverse .nav > .active > a > [class^="icon-"],
-.navbar-inverse .nav > .active > a > [class*=" icon-"],
-.dropdown-menu > li > a:hover > [class^="icon-"],
-.dropdown-menu > li > a:hover > [class*=" icon-"],
-.dropdown-menu > .active > a > [class^="icon-"],
-.dropdown-menu > .active > a > [class*=" icon-"] {
-  background-image: url("/data/img/glyphicons-halflings-white.png");
-}
-</style>
-
-
-<link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
+<link type='text/css' rel='stylesheet' href='../css/bootstrap.min.css'  />
+<link type='text/css' rel='stylesheet' href='../css/bootstrap-responsive.min.css'  />
 
 <script type="text/javascript">
 var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"]);(function() {var ga = document.createElement("script");ga.type = "text/javascript";ga.async = true;ga.src = "https://dev.mousephenotype.org/sites/mousephenotype.org/files/googleanalytics/ga.js?mjafjk";var s = document.getElementsByTagName("script")[0];s.parentNode.insertBefore(ga, s);})();
 </script>
 </head>
-<body>
-<h1>Welcome to the documentation of the IMPC data portal</h1>
+
+<body class="container">
+
+	<div class="row">
+		<div class="well">
+			<h1>IMPC data portal documentation</h1>
+			<p class="lead">Documentation for the International Mouse Phenotyping Consortium data portal</p>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="span3">
+
+			<div class="page-header"><h3>Quick help links</h3></div>
 	
-	Explore the diverse entry points to mouse phenotype data. 
-	<ul>
-	<li>How do I search my favorite gene, phenotype. 
-	<p>The IMPC portal offers a powerful search interface to query information on 
-	mouse production and mouse phenotyping. <a href="search-help.html">Find out more</a>
-	</p></li>
-	<li>I want to look at my fovourite gene and retrieve associated phenotype data. <a href="gene-help.html">Find out more</a></li>
-	<li>I want to get a list of genotypes associated to a specific phenotype.a href="phenotype-help.html">Find out more</a> </li>
-	<li>I want to retrieve X-ray, expression images. <a href="image-help.html">Find out more</a></li>
-	</ul>
-	<script type="text/javascript" src='/data/js/bootstrap/bootstrap.min.js' ></script>
+			<ul class="nav nav-list affix-top">
+			<li><a href="gene-help.html">Genes</a></li>
+			<li><a href="phenotype-help.html">Phenotypes</a> </li>
+			<li><a href="image-help.html">Images</a></li>
+			<li><a href="statistics-help.html">Statistics</a> </li>
+			</ul>
+	
+		</div>
+
+		<div class="span9">
+
+			<div class="page-header"><h3>Explore the diverse entry points to mouse phenotype data.</h3></div> 
+
+			<dl>
+				<dt>How do I search my favorite gene, phenotype.</dt>
+				<dd>The IMPC portal offers a powerful search interface to query information on 
+				mouse production and mouse phenotyping. <a href="search-help.html">Find out more</a>
+				</dd>
+			</dl>
+			<dl>
+				<dt>What are some of the the things I can do at the data portal</dt>
+				<dd><a href="gene-help.html">look at my favourite gene and retrieve associated phenotype data.</a></dd>
+				<dd><a href="phenotype-help.html">get a list of genotypes associated to a specific phenotype.</a></dd>
+				<dd><a href="image-help.html">retrieve X-ray, expression images.</a></dd>
+			</dl>
+
+		</div>
+	</div>
+
+	<script type="text/javascript" src='../js/bootstrap/bootstrap.min.js' ></script>
+
 </body>
 </html>
-
