index with graphs link and graph help page

--- a/WebContent/resources/documentation/graph-help.html
+++ b/WebContent/resources/documentation/graph-help.html
@@ -19,8 +19,8 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 
 	<div class="row">
 		<div class="well">
-			<h1>IMPC data portal documentation</h1>
-			<p class="lead">Documentation for the International Mouse Phenotyping Consortium data portal</p>
+			<h1>IMPC gene details page documentation</h1>
+			<p class="lead">Gene details</p>
 		</div>
 	</div>
 
@@ -30,11 +30,10 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 			<div class="page-header"><h3>Quick help links</h3></div>
 	
 			<ul class="nav nav-list affix-top">
-			<li><a href="gene-help.html">Genes</a></li>
+			<li><a href="gene-help.html#gene-page">Genes</a></li>
 			<li><a href="phenotype-help.html">Phenotypes</a> </li>
 			<li><a href="image-help.html">Images</a></li>
 			<li><a href="statistics-help.html">Statistics</a> </li>
-			<li><a href="graph-help.html">Graphs</a> </li>
 			</ul>
 	
 		</div>
