- hide table filter on phenotype page for directly associated terms - added a few lines to the phenotype help page

--- a/WebContent/resources/documentation/phenotype-help.html
+++ b/WebContent/resources/documentation/phenotype-help.html
@@ -58,6 +58,28 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 		</div>
 	</div>
 
+	<div>
+	<!--  ILINCA"S TEMP DIV -->
+<p>
+The gene associations table on the phenotype page comes in two slightly different flavours:
+<br/>
+- phenotype terms that are directly annotated to data
+<br/>
+- phenotype terms whose gene associations have been inferred. Thus, for a top level term, in the 5th column we have a phenotype term indicating the MP term directly associated to the respectivegene (allele??).
+</p>
+<figure>
+<img width="45%"  src="../img/phenotype-help-directly-annotated-mp.png"/>
+<figcaption>Title ../img/phenotype-help-directly-annotated-mp.png</figcaption>
+</figure>
+<figure>
+<img width="45%" src="../img/phenotype-help-top-level-table.png"/>
+<figcaption>Title ../img/phenotype-help-directly-annotated-mp.png</figcaption>
+</figure>
+<p>
+We offer 2 export options for the data in the table : in a text file with tab separated variables (<img title="TSV" style="vertical-align:text-bottom;" src="../img/tsv.png"/>) and as an excell sheet (<img title="XSL" style="vertical-align:text-bottom;" src="../img/xls.png"/>). In the table on our page entries lines are collapsed if all fields are identical except the gender. In the export file, for a html table line representing both genders we will export 2 lines in both XLS and TSV files.
+</p>
+	</div>
+
 	<script type="text/javascript" src='../js/bootstrap/bootstrap.min.js' ></script>
 
 </body>
