--- a/WebContent/resources/documentation/image-help.html
+++ b/WebContent/resources/documentation/image-help.html
@@ -34,23 +34,27 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 			<li><a href="phenotype-help.html">Phenotypes</a> </li>
 			<li><a href="image-help.html">Images</a></li>
 			<li><a href="statistics-help.html">Statistics</a> </li>
+			<li><a href="graph-help.html">Graphs</a> </li>
 			</ul>
 	
 		</div>
 
 		<div class="span9">
 
-			<div class="page-header"><h3>Explore the diverse entry points to mouse phenotype data.</h3></div> 
+			<div class="page-header"><h3>Explore Image Data.</h3></div> 
 
 			<dl>
-				<dt>How do I search my favorite gene, phenotype.</dt>
-				<dd>The IMPC portal offers a powerful search interface to query information on 
-				mouse production and mouse phenotyping. <a href="search-help.html">Find out more</a>
+				<dt>How do I search images associated with my favourite gene or phenotype?</dt>
+				<dd>The IMPC portal offers images that are annotated with Mouse Annatomy (MA) and Mammalian Phenotype (MP) terms. To search for images associated with for example Akt2 type Akt2 into the search box at the top of the page and then click on the images link at the side.
+				A list with categories of images together with the counts associated with images associated to the Akt2 is then displayed on the left. <a href="#ImageImport">Click here to find out more about where the images are from and how they are annotated</a>
+				
 				</dd>
 			</dl>
 			<dl>
-				<dt>What are some of the the things I can do at the data portal</dt>
-				<dd><a href="gene-help.html">look at my favourite gene and retrieve associated phenotype data.</a></dd>
+				<dt><a name="#ImageImport">Images</a> </dt>
+				<dd>The IMPC portal offers images that are annotated with Mouse Annatomy (MA) and Mammalian Phenotype (MP) terms. Currently images and their annotations are from legacy data from the MGP project at the Wellcome Trust Sanger Institute <a href="#ImageImport">Find out more</a>
+				 however in the future the portal will also contain images from the IMPC standardised screens <a href="https://www.mousephenotype.org/impress">https://www.mousephenotype.org/impress</a>
+				</dd>
 				<dd><a href="phenotype-help.html">get a list of genotypes associated to a specific phenotype.</a></dd>
 				<dd><a href="image-help.html">retrieve X-ray, expression images.</a></dd>
 			</dl>
