--- a/WebContent/resources/documentation/image-help.html
+++ b/WebContent/resources/documentation/image-help.html
@@ -46,7 +46,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 			<dl>
 				<dt>How do I search images associated with my favourite gene or phenotype?</dt>
 				<dd>The IMPC portal offers images that are annotated with Mouse Annatomy (MA) and Mammalian Phenotype (MP) terms. To search for images associated with for example Akt2 type Akt2 into the search box at the top of the page and then click on the images link at the side.
-				A list with categories of images together with the counts associated with images associated to the Akt2 is then displayed on the left. <a href="#ImageImport">Click here to find out more about where the images are from and how they are annotated</a>
+				A list with categories of images associated to the Akt2 is then displayed on the left, click on these categories to see sub categories and their respective counts of images associated with that category. You can also search for genes using MGI identifiers. To search for Anatomys you can use  <a href="#ImageImport">Click here to find out more about where the images are from and how they are annotated</a>
 				
 				</dd>
 			</dl>
@@ -54,6 +54,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 				<dt><a name="#ImageImport">Images</a> </dt>
 				<dd>The IMPC portal offers images that are annotated with Mouse Annatomy (MA) and Mammalian Phenotype (MP) terms. Currently images and their annotations are from legacy data from the MGP project at the Wellcome Trust Sanger Institute <a href="#ImageImport">Find out more</a>
 				 however in the future the portal will also contain images from the IMPC standardised screens <a href="https://www.mousephenotype.org/impress">https://www.mousephenotype.org/impress</a>
+				 <img src="img/pipelines_with_images.png">
 				</dd>
 				<dd><a href="phenotype-help.html">get a list of genotypes associated to a specific phenotype.</a></dd>
 				<dd><a href="image-help.html">retrieve X-ray, expression images.</a></dd>
