--- a/WebContent/resources/documentation/statistics-help.html
+++ b/WebContent/resources/documentation/statistics-help.html
@@ -34,6 +34,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 			<li><a href="phenotype-help.html">Phenotypes</a> </li>
 			<li><a href="image-help.html">Images</a></li>
 			<li><a href="statistics-help.html">Statistics</a> </li>
+			<li><a href="graph-help.html">Graphs</a> </li>
 			</ul>
 	
 		</div>
