update the index page help to include links to  graphs and statistics

--- a/WebContent/resources/documentation/index.html
+++ b/WebContent/resources/documentation/index.html
@@ -54,6 +54,8 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 				<dd><a href="gene-help.html">look at my favourite gene and retrieve associated phenotype data.</a></dd>
 				<dd><a href="phenotype-help.html">get a list of genotypes associated to a specific phenotype.</a></dd>
 				<dd><a href="image-help.html">retrieve X-ray, expression images.</a></dd>
+				<dd><a href="graph-help.html">view graphs of the raw data.</a></dd>
+				<dd><a href="statistics-help.html">understand how the IMPC uses statistics.</a></dd>
 			</dl>
 
 		</div>
