add search link to gene,index,search, and stats help pages

--- a/WebContent/resources/documentation/statistics-help.html
+++ b/WebContent/resources/documentation/statistics-help.html
@@ -30,6 +30,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 			<div class="page-header"><h3>Quick help links</h3></div>
 	
 			<ul class="nav nav-list affix-top">
+			<li><a href="search-help.html">Search</a></li>
 			<li><a href="gene-help.html">Genes</a></li>
 			<li><a href="phenotype-help.html">Phenotypes</a> </li>
 			<li><a href="image-help.html">Images</a></li>
@@ -46,9 +47,9 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 			<p>The IMPC uses a variety of statistical methods for making phenotype calls, including:</p>
 
 			<ul>
-				<li>Fisher's Exact test - for categorical data parameters</li>
-				<li>Mixed Model - for continuous data parameters which include random effects (such as <a href="#batch-effect">batch effect</a>)</li>
-				<li>Linear Model - for continuous data parameters when mixed model doesn't apply</li>
+				<li><a href=""><strong>Fisher's Exact test</strong></a> - for categorical data parameters</li>
+				<li><a href=""><strong>Mixed Model</strong></a> - for continuous data parameters which include random effects (such as <a href="#batch-effect">batch effect</a>)</li>
+				<li><a href=""><strong>Linear Model</strong></a> - for continuous data parameters when mixed model doesn't apply</li>
 			</ul>
 
 		</div>
