--- a/WebContent/resources/documentation/image-help.html
+++ b/WebContent/resources/documentation/image-help.html
@@ -30,6 +30,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 			<div class="page-header"><h3>Quick help links</h3></div>
 	
 			<ul class="nav nav-list affix-top">
+			<li><a href="search-help.html">Search</a></li>
 			<li><a href="gene-help.html">Genes</a></li>
 			<li><a href="phenotype-help.html">Phenotypes</a> </li>
 			<li><a href="image-help.html">Images</a>
@@ -78,7 +79,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 		</div>
 	</div>
 
-	<script type="text/javascript" src='../js/bootstrap/bootstrap.min.js' ></script>
+	
 
 </body>
 </html>
