--- a/WebContent/resources/documentation/search-help.html
+++ b/WebContent/resources/documentation/search-help.html
@@ -44,18 +44,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 
 			<div class="page-header"><h3>Explore the diverse entry points to mouse phenotype data.</h3></div> 
 
-			<dl>
-				<dt>How do I search my favorite gene, phenotype.</dt>
-				<dd>The IMPC portal offers a powerful search interface to query information on 
-				mouse production and mouse phenotyping. <a href="search-help.html">Find out more</a>
-				</dd>
-			</dl>
-			<dl>
-				<dt>What are some of the the things I can do at the data portal</dt>
-				<dd><a href="gene-help.html">look at my favourite gene and retrieve associated phenotype data.</a></dd>
-				<dd><a href="phenotype-help.html">get a list of genotypes associated to a specific phenotype.</a></dd>
-				<dd><a href="image-help.html">retrieve X-ray, expression images.</a></dd>
-			</dl>
+			<p>Details about searching the IMPC data can be found here.
 
 		</div>
 	</div>
