--- a/WebContent/resources/documentation/statistics-help.html
+++ b/WebContent/resources/documentation/statistics-help.html
@@ -42,14 +42,27 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 
 		<div class="span9">
 
-			<div class="page-header"><h3>Details about the way IMPC uses statistics.</h3></div> 
+			<div class="page-header"><h3>More details about the way IMPC uses statistics.</h3></div> 
+
+			<h4>IMPC statistics</h4>
 
 			<p>The IMPC uses a variety of statistical methods for making phenotype calls, including:</p>
 
 			<ul>
-				<li><a href=""><strong>Fisher's Exact test</strong></a> - for categorical data parameters</li>
-				<li><a href=""><strong>Mixed Model</strong></a> - for continuous data parameters which include random effects (such as <a href="#batch-effect">batch effect</a>)</li>
-				<li><a href=""><strong>Linear Model</strong></a> - for continuous data parameters when mixed model doesn't apply</li>
+				<li><a href="https://en.wikipedia.org/wiki/Fisher%27s_exact_test"><strong>Fisher's Exact test</strong></a> - for categorical data parameters</li>
+				<li><a href="https://en.wikipedia.org/wiki/Mixed_model"><strong>Mixed Model</strong></a> - for continuous data parameters which include random effects (such as <a href="#batch-effect">batch effect</a>)</li>
+				<li><a href="https://en.wikipedia.org/wiki/Linear_model"><strong>Linear Model</strong></a> - for continuous data parameters when mixed model doesn't apply</li>
+			</ul>
+
+			<h4>Europhenome statistics</h4>
+
+			<p>Europhenome data is analyzed using a variety of statistical methods for making phenotype calls, including:</p>
+
+			<ul>
+				<li><a href="http://europhenome.org/databrowser/significanceCatagorical.jsp"><strong>Pearson's chi-square test</strong></a> - for categorical data parameters</li>
+				<li><a href="http://europhenome.org/databrowser/significanceReference.jsp"><strong>Reference Range</strong></a> - for continuous data parameters</li>
+				<li><a href="http://europhenome.org/databrowser/significance1DT.jsp"><strong>Student's T test</strong></a> - for continuous data parameters </li>
+				<li><a href="http://europhenome.org/databrowser/significance1D.jsp"><strong>Rank sum (Mann-Whitney U test)</strong></a> - for continuous data parameters</li>
 			</ul>
 
 		</div>
