updated path for search page documentation

--- a/WebContent/resources/documentation/search-help.html
+++ b/WebContent/resources/documentation/search-help.html
@@ -43,8 +43,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 		<div class="span9">
 
 			<div class="page-header"><h3>Explore the diverse entry points to mouse phenotype data.</h3></div> 
-
-			<p>Details about searching the IMPC data can be found here.
+			<img src='img/facetPanel.jpg' />
 
 		</div>
 	</div>
