index.html modified

--- a/WebContent/resources/documentation/index.html
+++ b/WebContent/resources/documentation/index.html
@@ -20,7 +20,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 	<div class="row">
 		<div class="well">
 			<h1>IMPC data portal documentation</h1>
-			<p class="lead">Documentation for the International Mouse Phenotyping Consortium data portal</p>
+			<p class="lead">Explore how to retrieve mouse phenotype data</p>
 		</div>
 	</div>
 
@@ -42,12 +42,12 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 
 		<div class="span9">
 
-			<div class="page-header"><h3>Explore the diverse entry points to mouse phenotype data.</h3></div> 
+			<div class="page-header"></div> 
 
 			<dl>
-				<dt>How do I search my favorite gene, phenotype.</dt>
-				<dd>The IMPC portal offers a powerful search interface to query information on 
-				mouse production and mouse phenotyping. <a href="search-help.html">Find out more</a>
+				<dt>The IMPC portal offers a powerful search interface to query information on 
+				mouse production and mouse phenotyping.</dt>
+				<dd><a href="search-help.html">How do I search my favorite gene or phenotype?</a>
 				</dd>
 			</dl>
 			<dl>
@@ -59,6 +59,11 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 				<dd><a href="statistics-help.html">understand how the IMPC uses statistics.</a></dd>
 			</dl>
 
+			<dl>
+				<dt>IMPC Quick Reference Card</dt>
+				<dd><a href="pdf/IMPC-refCard.pdf"><img src="img/pdf-icon.png" alt="IMPC Quick Reference Card"></a>
+				</dd>
+			</dl>
 		</div>
 	</div>
 
