--- a/WebContent/resources/documentation/image-help.html
+++ b/WebContent/resources/documentation/image-help.html
@@ -59,7 +59,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 				<img src="img/image_facet.png">
 				</dd>
 				
-				<dt><a name="imported">imported Images</a> </dt>
+				<dt><a name="imported">Imported Images</a> </dt>
 				<dd>The IMPC portal offers images that are annotated with Mouse Annatomy (MA) and Mammalian Phenotype (MP) terms. Currently images and their annotations are from legacy data from the MGP project at the Wellcome Trust Sanger Institute where the terms were manually annotated by researchers.
 				 however in the future the portal will also contain images from the IMPC standardised screens <a href="https://www.mousephenotype.org/impress">https://www.mousephenotype.org/impress</a>. The procedures highlighted in red will have image data collected.
 				 <img src="img/pipelines_with_images.png">
