--- a/WebContent/resources/documentation/search-help.html
+++ b/WebContent/resources/documentation/search-help.html
@@ -30,6 +30,8 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 			<div class="page-header"><h3>Quick help links</h3></div>
 	
 			<ul class="nav nav-list affix-top">
+			
+			<li><a href="index.html">Overview</a></li>
 			<li><a href="search-help.html">Search</a></li>
 			<li><a href="gene-help.html">Genes</a></li>
 			<li><a href="phenotype-help.html">Phenotypes</a> </li>
