Terry's changes (reformulating questions on the index page)

--- a/WebContent/resources/documentation/index.html
+++ b/WebContent/resources/documentation/index.html
@@ -31,7 +31,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 	
 			<ul class="nav nav-list affix-top">
 			
-				<li><a href="index.html">Overview</a></li>
+			<li><a href="index.html">Overview</a></li>
 			<li><a href="search-help.html">Search</a></li>
 			<li><a href="gene-help.html">Genes</a></li>
 			<li><a href="phenotype-help.html">Phenotypes</a> </li>
@@ -49,16 +49,18 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 			<dl>
 				<dt>The IMPC portal offers a powerful search interface to query information on 
 				mouse production and mouse phenotyping.</dt>
-				<dd><a href="search-help.html">How do I search my favorite gene or phenotype?</a>
+				<dd><a href="search-help.html">How to find the  data you want</a>
 				</dd>
 			</dl>
 			<dl>
 				<dt>What are some of the the things I can do at the data portal</dt>
-				<dd><a href="gene-help.html">look at my favourite gene and retrieve associated phenotype data.</a></dd>
-				<dd><a href="phenotype-help.html">get a list of genotypes associated to a specific phenotype.</a></dd>
-				<dd><a href="image-help.html">retrieve X-ray, expression images.</a></dd>
-				<dd><a href="graph-help.html">view graphs of the raw data.</a></dd>
-				<dd><a href="statistics-help.html">understand how the IMPC uses statistics.</a></dd>
+				<dd><a href="gene-help.html">Find gene to phenotype associations, allele maps, and more.</a></dd>
+				<dd><a href="phenotype-help.html">Find a list of genes associated with a phenotype, 
+assays used to measure the phenotype and more</a></dd>
+				<dd><a href="image-help.html">Retrieve LacZ and phenotype images</a></dd>
+				<dd><a href="graph-help.html">Learn how we visualize phenotype data</a></dd>
+				<dd><a href="statistics-help.html">Learn about the statistical tests used to 
+determine gene to phenotype associations</a></dd>
 			</dl>
 
 			<dl>
