--- a/WebContent/resources/documentation/image-help.html
+++ b/WebContent/resources/documentation/image-help.html
@@ -73,7 +73,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 				</dd>
 				
 				<dt><a name="download">How do I get image data/ download?</a></dt>
-				<dd>At present there is no way of easily downloading large numbers of images at once. However there is a restful web service available for retrieving information pertaining to images via a web browser or a programming language of your choice.
+				<dd>Individual images may be downloaded by right clicking and saving to your hard drive. Batch downloading of images is in development.
 				</dd>
 				
 			</dl>
