deleted batch effect, added a line abotu upcoming bioconductor package

--- a/WebContent/resources/documentation/statistics-help.html
+++ b/WebContent/resources/documentation/statistics-help.html
@@ -52,9 +52,10 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 
 			<ul>
 				<li><a href="https://en.wikipedia.org/wiki/Fisher%27s_exact_test"><strong>Fisher's Exact test</strong></a> - for categorical data parameters</li>
-				<li><a href="https://en.wikipedia.org/wiki/Mixed_model"><strong>Mixed Model</strong></a> - for continuous data parameters which include random effects (such as <a href="#batch-effect">batch effect</a>)</li>
+				<li><a href="https://en.wikipedia.org/wiki/Mixed_model"><strong>Mixed Model</strong></a> - for continuous data parameters which include random effects </li>
 				<li><a href="https://en.wikipedia.org/wiki/Linear_model"><strong>Linear Model</strong></a> - for continuous data parameters when mixed model doesn't apply</li>
 			</ul>
+			<p> Further documentation will be available as part of an upcoming statistical Bioconducter package </p>
 
 			<h4>Europhenome statistics</h4>
 
