deleted dot & comma on documentation index page

--- a/WebContent/resources/documentation/index.html
+++ b/WebContent/resources/documentation/index.html
@@ -54,7 +54,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 			</dl>
 			<dl>
 				<dt>What are some of the the things I can do at the data portal</dt>
-				<dd><a href="gene-help.html">Find gene to phenotype associations, allele maps, and more.</a></dd>
+				<dd><a href="gene-help.html">Find gene to phenotype associations, allele maps and more</a></dd>
 				<dd><a href="phenotype-help.html">Find a list of genes associated with a phenotype, 
 assays used to measure the phenotype and more</a></dd>
 				<dd><a href="image-help.html">Retrieve LacZ and phenotype images</a></dd>
