--- a/WebContent/resources/documentation/search-help.html
+++ b/WebContent/resources/documentation/search-help.html
@@ -57,37 +57,37 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 		<div class="span9">
 
 			<div class="page-header"><h3>Explore the diverse entry points to mouse phenotype data.</h3></div> 
-			<h3><a name="quick_gene_srch">Quick Gene Search</a></h3>			
+			<h3><a name="quick_gene_srch" href='#'>Quick Gene Search</a></h3>			
 			<div>Type a gene symbol, gene ID, name or human orthologue into search box and returned results will returned relevant gene pages.
 			<p>Eg. search by gene symbol "akt2":<br>
 			</div>			
 			<img src='img/quick_gene_search.jpg' />
 			
-			<h3><a name="quick_pheno_srch">Quick Phenotype Search</a></h3>
+			<h3><a name="quick_pheno_srch" href='#'>Quick Phenotype Search</a></h3>
 			<div>Type an abnormal phenotype or MP:ID, click on phenotype facet on the left panel, and the results grid will return relevant phenotype pages.
 			<p>Eg. search by phenotype "glucose":<br>
 			</div> 
 			<img src='img/quick_phenotype_search.jpg' />
 			
-			<h3><a name="quick_param_srch">Quick Assay Search</a></h3>
+			<h3><a name="quick_param_srch" href='#'>Quick Assay Search</a></h3>
 			<div>Type an assay, parameter or IMPReSS ID, click on the procedure facet on the left panel, and the results grid will return relevant parameter pages. 
 			<p>Eg. search by parameter "grip strength":<br>
 			</div> 
 			<img src='img/quick_param_search.jpg' />
 			
-			<h3><a name="quick_anatomy_srch">Quick Anatomy Search</a></h3>
+			<h3><a name="quick_anatomy_srch" href='#'>Quick Anatomy Search</a></h3>
 			<div>Type an anatomical entity or MA:ID, click on the anatomy facet on the on the left panel, and the results grid will return relevant anatomy pages.
 			<p>Eg. search by anatomy "eye":<br>
 			</div> 
 			<img src='img/quick_anatomy_search.jpg' />
 			
-			<h3><a name="quick_img_srch">Quick Image Search</a></h3>
+			<h3><a name="quick_img_srch" href='#'>Quick Image Search</a></h3>
 			<div>Type a gene, phenotype, assay, or anatomical entity, click on the images facet on the left panel and the results grid will return relevant image pages.
 			<p>Eg. search by phenotype "immune":<br>			
 			</div> 
 			<img src='img/quick_img_search.jpg' />
 			
-			<h3><a name="complex_srch">Complex Search</a></h3>
+			<h3><a name="complex_srch" href='#'>Complex Search</a></h3>
 			<div>Facets on left hand panel can be used in combination to generate complex queries.</div>
 			<img src='img/facetPanel.jpg' />
 		</div>
