update hostname code

--- a/WebContent/resources/documentation/search-help.html
+++ b/WebContent/resources/documentation/search-help.html
@@ -16,7 +16,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 
 $(document).ready(function(){
 	//var drupalBaseUrl = "${drupalBaseUrl}";
-	var domain = window.location.host;	
+	var domain = window.location.hostname;	
 	$('a#logo').attr('href', domain);
 });
 
