--- a/WebContent/resources/documentation/statistics-help.html
+++ b/WebContent/resources/documentation/statistics-help.html
@@ -9,7 +9,8 @@
 
 <link type='text/css' rel='stylesheet' href='../css/bootstrap.min.css'  />
 <link type='text/css' rel='stylesheet' href='../css/bootstrap-responsive.min.css'  />
-
+<script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+<script type="text/javascript" src="../js/helpDocLogo.js"></script>
 <script type="text/javascript">
 var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"]);(function() {var ga = document.createElement("script");ga.type = "text/javascript";ga.async = true;ga.src = "https://dev.mousephenotype.org/sites/mousephenotype.org/files/googleanalytics/ga.js?mjafjk";var s = document.getElementsByTagName("script")[0];s.parentNode.insertBefore(ga, s);})();
 </script>
@@ -19,7 +20,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 
 	<div class="row">
 		<div class="well">
-			<h1>IMPC statistics page documentation</h1>
+			<h1><a id='logo' href=''><img src='img/IMPCBetalogo.png' /></a>IMPC statistics page documentation</h1>
 			<p class="lead">Statistics details</p>
 		</div>
 	</div>
