fixed qtip documentation link for the new panel on the phenotype page.

--- a/WebContent/resources/documentation/phenotype-help.html
+++ b/WebContent/resources/documentation/phenotype-help.html
@@ -74,7 +74,9 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 				</figure>
 				
 				<h3><a name="phenotype-stats-panel" href='#'>Phenotype stats</a></h3>
-				<p> The percentage of genes associated to the current phenotype in one sex only, say females is the number of genes associated to phenotypeX in females divided by the total number of genes tested in females for parameters potentially leading to phenotypeX associations. Thus, the percent values we shoe for females and males do not have to add up to 1.</p>
+				<p> The percentage of genes associated to the current phenotype in one sex only, say females is the number of genes associated to phenotypeX in 
+				females divided by the total number of genes tested in females for parameters potentially leading to phenotypeX associations. Thus, the percent 
+				values we show for females and males do not have to add up to 1 nor do the percentages for males/females only need to be smaller than the combined percentage.</p>
 								
 			<h3><a name="associations" href='#'>Gene-Phenotype associations</a></h3>
 			
